--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="ETH Gas Tracker" />
     <title>ETH Gas Tracker</title>
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/fuel-pump_26fd.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
