--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ETH Gas Tracker" />
-    <title>ETH Gas Tracker</title>
+    <meta name="description" content="ETH Gas.watch" />
+    <title>ETH Gas.watch</title>
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/fuel-pump_26fd.png">
   </head>
   <body>
