--- a/web/public/index.html
+++ b/web/public/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="ETH Gas.watch" />
     <title>ETH Gas.watch</title>
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/fuel-pump_26fd.png">
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101273918);</script>
+    <script async src="//static.getclicky.com/js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
