--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,11 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ETH Gas.watch" />
-    <title>ETH Gas.watch</title>
     <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/fuel-pump_26fd.png">
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101273918);</script>
     <script async src="//static.getclicky.com/js"></script>
+
+    <title>ETH Gas.watch</title>
+    <meta name="description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops." />
+    <meta property="og:title" content="ETH Gas.watch">
+    <meta property="og:description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops.">
+    <meta property="og:image" content="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/apple/155/fuel-pump_26fd.png">
+    <meta property="og:url" content="https://ethgas.watch/">
+    <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
