--- a/web/public/index.html
+++ b/web/public/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="%PUBLIC_URL%/fuel.png">
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101273918);</script>
     <script async src="//static.getclicky.com/js"></script>
 
     <title>ETH Gas.watch</title>
-    <meta name="description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops." />
     <meta property="og:title" content="ETH Gas.watch">
+    <meta name="description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops." />
     <meta property="og:description" content="An reliable Ethereum gas price feed, with email alerts for when the price drops.">
-    <meta property="og:image" content="%PUBLIC_URL%/fuel.png">
-    <meta property="og:url" content="%PUBLIC_URL%">
+    <link rel="icon" href="https://ethgas.watch/fuel.png">
+    <meta property="og:image" content="https://ethgas.watch/fuel.png">
+    <meta property="og:url" content="https://ethgas.watch/">
+    <meta property=”og:type” content=”website” />
     <meta name="twitter:card" content="summary_large_image">
   </head>
   <body>
