--- a/web/public/index.html
+++ b/web/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://ethgas.watch/fuel.png">
     <meta property="og:url" content="https://ethgas.watch/">
     <meta property=”og:type” content=”website” />
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
